2nd question added

--- a/Research/research.html
+++ b/Research/research.html
@@ -24,11 +24,11 @@
       </div>
     </div>
     <div class="popup"  id="question2" style="display: none;">
-      <h3 class="line anim-typewriter">Q</h3>
-      <p id="instruct">Q?</p>
+      <h3 class="line anim-typewriter">Where was water found on the moon</h3>
+      <p id="instruct"></p>
       <div class="buttons">
-        <h2 onclick="rightAnswer2()" class="start-the-game">A</h2>
-        <h2 onclick="wrongAnswer2()" class="start-the-game">B</h2>
+        <h2 onclick="rightAnswer2()" class="start-the-game">Shadowed area</h2>
+        <h2 onclick="wrongAnswer2()" class="start-the-game">Sunlit area</h2>
       </div>
     </div>
   </div>
