--- a/Planning.html
+++ b/Planning.html
@@ -31,7 +31,7 @@
   </body>
   <script>
     document.getElementById("next-stage").onclick = function () {
-        location.href = "../Launching/Launching.html";
+        location.href = "./Launching/Launching.html";
     };
 </script>
 </html>
