correcting launching stage

--- a/Launching.html
+++ b/Launching.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <title>Explore Moon</title>
-    <link rel="stylesheet" href="../styles/all.css" />
-    <link rel="stylesheet" href="launch.css" />
-    <script src="../scripts/planning.js" type="module"></script>
-    <script src="launch.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="styles/all.css" />
+    <link rel="stylesheet" href="styles/launch.css" />
+    <script src="scripts/planning.js" type="module"></script>
+    <script src="scripts/launch.js" type="text/javascript"></script>
     <script src="../scripts/src/yuka.min.js"></script>
   </head>
   <body style="overflow: auto;">
