--- a/Launching.html
+++ b/Launching.html
@@ -7,17 +7,17 @@
     <link rel="stylesheet" href="styles/launch.css" />
     <script src="scripts/planning.js" type="module"></script>
     <script src="scripts/launch.js" type="text/javascript"></script>
-    <script src="../scripts/src/yuka.min.js"></script>
+    <script src="scripts/src/yuka.min.js"></script>
   </head>
   <body style="overflow: auto;">
 
     <div id="rightAns" style="display:none;">
       <video id="rocketVideo" controls>
-        <source src="../img/Rocket Launch.mp4" type="video/mp4">
+        <source src="img/Rocket Launch.mp4" type="video/mp4">
       </video>
     </div>
     <div class="stages" id="stages">	
-      <img src="../img/gps.png" alt="Stage">
+      <img src="img/gps.png" alt="Stage">
     </div>
     <div class="progress">
       <div class="progress-done ">Planning
@@ -41,19 +41,19 @@
     <div class="main">
       <!-- <div id="rightAns" style="display:none;">
         <video controls autoplay width="50%" style="border: 3px solid white; padding: 10px;">
-          <source src="../img/Rocket Launch.mp4" type="video/mp4">
+          <source src="img/Rocket Launch.mp4" type="video/mp4">
         </video>
       </div> -->
       <div id="div1">
-        <img src="../img/Rocket.png" alt="rocket">
+        <img src="img/Rocket.png" alt="rocket">
         <button class="btn" id="btn1" onclick="esLaunch()">11.6</button>
       </div>
       <div id="div2">
-        <img src="../img/Rocket.png" alt="rocket">
+        <img src="img/Rocket.png" alt="rocket">
         <button class="btn" id="btn2" onclick="eLaunch()">9.5</button>
       </div>
       <div id="div3">
-        <img src="../img/Rocket.png" alt="rocket">
+        <img src="img/Rocket.png" alt="rocket">
         <button class="btn" id="btn3" onclick="pLaunch()">13</button>
       </div>
     </div>
